--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
      
-        <a class="nav-link" href="{{ path('accueil')}}">Accueil <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ path('index')}}">Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
          <a class="nav-link" href="{{ path('index')}}">A propos</a>
