Insertion ne marche pas

--- a/templates/default/formVente.html.twig
+++ b/templates/default/formVente.html.twig
@@ -11,33 +11,16 @@
             </div>         
        </article>      
 </div>
-<div class="container">
+            <div class="container">
 
-    <div class="container">
+                {{form_start(formVente)}}
 
-    {#Methode la plus simpmle: form()  #}
-            {#  {{ form(formVente) }} #}  
+                {{form_widget(formVente)}}
 
-    {# La Methode laplus repandue: form_widget()#}
-          {#}
-              {{ form_start(formVente) }}
-              {{ form_widget(formVente) }}    
-                  <button class="btn">Enregistez</button>
-              {{ form_end(formVente) }} 
-          #}
-    {# La Methode laplus stylé: form_widget(formVente)#}
+                <button type="submit" class="btn btn-success ">Register</button>
 
-        {{ form_start(formVente) }}
-            {#{ form_row(formVente.titre, {'attr': {'placeholder': "Titre de l'immobilier :"} }) }}
-            {{ form_row(formVente.image, {'attr': {'placeholder': "Photo de l'immobilier:"} }) }#}
-            {#{ form_row(formVente.description, {'attr': {'placeholder': "Description de l'immobilier :"} }) }#}
+                {{form_end(formVente)}}
 
-        
-    {{ form_end(formVente) }}
-    <button class="btn btn-success ">Register</button>
-      <br><br><br>
-    </div>
-
-</div>
+        </div>
 
 {% endblock %}
