--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,8 +62,8 @@
      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="{{ path('administration')}}">Administration</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="{{ path('enregistrements')}}">Enregistrements</a>
-          <a class="dropdown-item" href="{{ path('autre')}}">Autre</a>
+          <a class="dropdown-item" href="{{ path('immo.vente')}}">Enregistrement Ventes</a>
+          <a class="dropdown-item" href="{{ path('immo.location')}}">Enregistrement Locations</a>
         </div>
       </li>
      
